@@ -1,5 +1,11 @@
 2001-08-09  Martin Baulig  <baulig@suse.de>
 
+	* Makefile.am (panel_SOURCES): Removed everything
+	which is in panel-temp so that we know which files
+	still need to be ported.
+
+2001-08-09  Martin Baulig  <baulig@suse.de>
+
 	* foobar-widget.[ch]: Ported to GTK+ 2.0.
 
 	* Makefile.am: Added foobar-widget.[ch] and
